<resources>
    <string name="app_name">ProyectoMovil</string>

    <string name="nav_Home">Home</string>
    <string name="nav_Profile">Profile</string>
    <string name="nav_Favorites">Favorites</string>
    <string name="nav_LogOut">Log Out</string>

    <string name="add_Name">Name of Stand</string>
    <string name="add_Name_Hint">Hamburguer´s</string>
    <string name="add_Photo">Photo</string>
    <string name="add_Description">Description</string>
    <string name="add_Description_Hint">The restaurant is...</string>
    <string name="add_Type">Types of Food</string>
    <string name="add_Location">Location</string>
    
    <string name="Buffet">Buffet</string>
    <string name="Chinese">Chinese</string>
    <string name="Hamburgers">Hamburgers</string>
    <string name="HotDogs">Hot-Dogs</string>
    <string name="Pizza">Pizza</string>
    <string name="Snack">Snack</string>
    <string name="Tacos">Tacos</string>
    <string name="Others">Others</string>

    <string name="comments_Comment">Write a comment...</string>
    <string name="comments_btnPost">Post</string>

    <string name="detail_Comment">Comments</string>
    <string name="detail_Location">Location</string>

    <string name="login_User">Email</string>
    <string name="login_Password">Password</string>
    <string name="login_btnLogin">Log In</string>
    <string name="login_or">Or</string>
    <string name="login_btnFacebook">Log In with Facebook</string>
    <string name="login_btnForgotPassword">Forgot Password?</string>
    <string name="login_btnRegister">Register</string>
    
    <string name="profile_ProfilePicture">Profile Picture</string>
    <string name="profile_UserName">User Name</string>
    <string name="profile_UserName_Example">Kalen</string>
    <string name="profile_Email">E-mail</string>
    <string name="profile_Email_Example">kalen@hotmail.com</string>
    <string name="profile_Password">Password</string>
    <string name="profile_Password_Example">12</string>
    <string name="profile_Languaje">Languaje</string>
    <string-array name="profile_Languajes">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="profile_btnEdit">Edit</string>

    <string name="register_User">User Name</string>
    <string name="register_Email">E-mail</string>
    <string name="register_Password">Password</string>
    <string name="register_ConfirmPassword">Confirm Password</string>
    <string name="register_ProfilePicture">Profile Picture</string>
    <string name="register_btnCancel">Cancel</string>
    <string name="register_btnSignIn">Sign In</string>

    <string name="tv_noResultados">No stands found</string>

    <!--Toast-->
    <string name="toast_Fragment">Already open!</string>
    <string name="toast_contrasenia">Password not are equal</string>
    <string name="toast_faltan_campos">"Fill in missing fields!"</string>
    <string name="favoriteAdd">Added to favorites</string>
    <string name="favoriteDelete">Delete from favorites.</string>
    <string name="toastLogin">User or password was invalid.</string>
    <string name="addStand">Stand added successful.</string>
    <string name="modifyProfile">User modify successful.</string>
    <string name="toast_noInternet">No internet connection</string>
    <string name="toast_noInternetAddPuesto">No internet connection, when the connection is available, the stand will be available</string>
    <!--Toast-->

    <!--Titles -->
    <string name="fragmentAdd">Add Stand</string>
    <string name="fragmentProfile">Profile</string>
    <string name="fragmentFavorites">Favorites</string>
    <string name="fragmentMenu">Menu</string>
    <string name="fragmentLogin">Log In</string>
    <string name="fragmentRegister">Register</string>

    <string name="facebook_app_id">802431829793293</string>

    <string name="btn_compartir">Share</string>
</resources>
