<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imgPhotoStand"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editUser"
        android:layout_below="@+id/imgPhotoStand"
        android:hint="@string/login_User"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:hint="@string/login_Password"
        android:layout_below="@+id/editUser"
        android:textAlignment="center"
        android:fontFamily="sans-serif" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btnLogin"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/editPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_or"
        android:id="@+id/txtOr"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btnFacebook"
        android:id="@+id/btnFacebook"
        android:layout_below="@+id/txtOr"
        android:background="#2b42c7"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFacebook"
        android:layout_marginTop="8dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btnRegister"
            android:id="@+id/btnRegister"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>